# whisper.cpp

bindings/javascript/: whisper.js
examples/whisper.wasm/: CMakeLists.txt  emscripten.cpp
